bloonix-agent (0.54) released at 2015-06-16

    * Implemented support for Windows.
    * Expand sudoers settings for bloonix.

bloonix-agent (0.53) released at 2015-04-22

    * Fixed parsing of command options.

bloonix-agent (0.52) released at 2015-04-14

    * Satellite configuration parameters implemented.

bloonix-agent (0.51) released at 2015-04-07

    * Fixed bloonix-init-host and implemented Bloonix::IO::SIPC.

bloonix-agent (0.50) released at 2015-03-21

    * Implemented Bloonix::IO::SIPC as replacement for Bloonix:REST.

bloonix-agent (0.49) released at 2015-03-09

    * Improved parsing of nagios statistics.
    * Fixed uninizialied value host_id in get_services().
    * An empty host list is now allowed.
    * Fixed bloonix-init-host: the server response is
      now parsed correctly.
    * Added a default sudoers file for the bloonix agent.

bloonix-agent (0.48) released at 2015-01-27

    * Fixed permissions of bloonix-agent.log.

bloonix-agent (0.47) released at 2015-01-26

    * Fixed: Can't call method "notice" on an undefined value
      at /usr/share/perl5/Bloonix/Agent.pm line 81

bloonix-agent (0.46) released at 2015-01-26

    * Fixed creation of bloonix-agent.log.

bloonix-agent (0.45) released at 2014-12-23

    * Fixed reload function.

bloonix-agent (0.44) released at 2014-12-23

    * Improved data handling.

bloonix-agent (0.43) released at 2014-12-23

    * Fixed VERSION in Worker.pm.
    * Fixed nagios/simple plugin handling.

bloonix-agent (0.42) released at 2014-12-23

    * Added parameter poll_interval. The default is 60s.

bloonix-agent (0.41) released at 2014-12-17

    * Improved the communication stack between parent and children.
    * Improved the check distribution to children.
    * Replaced the keyword "nagios" with "simple".

bloonix-agent (0.40) released at 2014-12-11

    * Fixed the benchmark functions.

bloonix-agent (0.39) released at 2014-12-03

    * Fixed parsing nagios argument list.
